# itk-project

./: .env  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: bc5a751da5b5_initial_migration.py
tests/: conftest.py
tests/api/: test_wallets.py
